# kb-agent

./: .gitignore  .kb-inbox.jsonl  AGENTS.md  COUNCIL-IMPROVEMENTS.md  DESIGN.md  README.md  bb.edn  install.sh  pyproject.toml
.claude/: .context-manifest.json
.clj-kondo/.cache/v1/clj/: babashka.cli.exec.transit.json  babashka.core.transit.json  babashka.curl.transit.json  babashka.http-client.interceptors.transit.json  babashka.http-client.internal.helpers.transit.json  babashka.http-client.internal.multipart.transit.json  babashka.http-client.internal.transit.json  babashka.http-client.transit.json  (+232 more)
.tmp/tasks/kb-remaining/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  subtask_08.json  subtask_09.json  subtask_10.json  subtask_11.json  subtask_12.json  task.json
examples/: CLAUDE.md  board.yaml
githooks/: post-checkout  post-merge
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
kb/: __init__.py  __main__.py  board.py  cli.py  server.py  ui.html
src/kb/: board.clj  cli.clj  server.clj  ui.html  util.clj
tests/: integration.clj  run_tests.py  test_board.py  test_server.py
web/: index.html  nohup.out  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: ActivityBar.tsx  ActivityFeed.tsx  AddCardDialog.tsx  ApprovalBar.tsx  AttentionDashboard.tsx  Board.tsx  Card.tsx  CardDetail.tsx  DiffView.tsx  Header.tsx  Lane.tsx  Toast.tsx
web/src/hooks/: useBoard.ts
web/src/lib/: diff.ts  utils.ts
(+261 files in other folders)
